# Unit-65A

./: Cargo.toml  main.js  package.json  tsconfig.json
.github/workflows/: node.js.yml
scripts/: deploy.sh
src/: AppDiscord.ts  EventHandler.ts  Main.ts  MessageHandler.ts  SlashHandler.ts  main.rs
