[package]
name = "Unit_65A"
version = "0.1.0"
authors = ["accrazed <accrazed@gmail.com>"]
edition = "2018"
repository = "https://github.com/AccraZed/Unit-65A"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
futures = "0.3"